--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "tailwindcss": "^3.4.1"
   }
 }
